--- a/index.html
+++ b/index.html
@@ -5,56 +5,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <header class="header">
+      <a class="header-logo link" href="./index.html"
+        ><span class="header-logo-accent">Web</span>Studio</a
+      >
+      <nav class="header-nav">
+        <ul class="header-nav-list list">
+          <li class="header-nav-item">
+            <a class="header-nav-link link" href="./index.html">Студия</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link link" href="./portfolio.html"
+              >Портфолио</a
+            >
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link link" href="">Контакты</a>
+          </li>
         </ul>
       </nav>
+      <ul class="header-contact-list list">
+        <li class="header-contact-item">
+          <a class="header-contact-link link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="header-contact-item">
+          <a class="header-contact-link link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
     </header>
     <main>
       <!--Hero-->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-btn">Заказать услугу</button>
       </section>
       <!--Qualitys-->
-      <section>
-        <h2>Качества</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+      <section class="quality">
+        <h2 class="visually-hidden">Качества</h2>
+        <ul class="quality-list list">
+          <li class="quality-item">
+            <h3 class="quality-title">Внимание к деталям</h3>
+            <p class="quality-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="quality-item">
+            <h3 class="quality-title">Пунктуальность</h3>
+            <p class="quality-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="quality-item">
+            <h3 class="quality-title">Планирование</h3>
+            <p class="quality-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
+          <li class="quality-item">
+            <h3 class="quality-title">Современные технологии</h3>
+            <p class="quality-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -62,11 +87,11 @@
         </ul>
       </section>
       <!--Works-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <a href="">
+      <section class="works">
+        <h2 class="works-title">Чем мы занимаемся</h2>
+        <ul class="works-list list">
+          <li class="works-item">
+            <a class="works-link link" href="">
               <img
                 src="./images/code.jpg"
                 alt="пишет код на планшете"
@@ -75,8 +100,8 @@
               />
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="works-item">
+            <a class="works-link link" href="">
               <img
                 src="./images/mobile.jpg"
                 alt="девушка с телефоном возле ноутбука"
@@ -85,8 +110,8 @@
               />
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="works-item">
+            <a class="works-link link" href="">
               <img
                 src="./images/color.jpg"
                 alt="планшет в руке с гаммой цветов"
@@ -98,69 +123,76 @@
         </ul>
       </section>
       <!--Team-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img
               src="./images/product-designer.jpg"
               alt="дизайнер продукта"
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-list-title">Игорь Демьяненко</h3>
+            <p class="team-list-text" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/frontend-developer.jpg"
               alt="фронтенд разработчик"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-list-title">Ольга Репина</h3>
+            <p class="team-list-text" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/marketing.jpg"
               alt="маркетолог"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-list-title">Николай Тарасов</h3>
+            <p class="team-list-text" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/ui-designer.jpg"
               alt="дизайнер интерфейсов"
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-list-title">Михаил Ермаков</h3>
+            <p class="team-list-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <ul>
-          <li>
+    <footer class="footer">
+      <a class="footer-logo link" href="./index.html"
+        ><span class="footer-logo-accent">Web</span>Studio
+      </a>
+      <address class="footer-address">
+        <ul class="footer-list list">
+          <li class="footer-item">
             <a
+              class="footer-address-link link"
               href="https://goo.gl/maps/RLzgMfpruisoDYnj7"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+          <li class="footer-item">
+            <a class="footer-link link" href="mailto:info@example.com"
+              >info@example.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <li class="footer-item">
+            <a class="footer-link link" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
