--- a/portfolio.html
+++ b/portfolio.html
@@ -5,164 +5,216 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <header class="header">
+      <a class="header-logo link" href="./index.html"
+        ><span class="header-logo-accent">Web</span>Studio</a
+      >
+      <nav class="header-nav">
+        <ul class="header-nav-list list">
+          <li class="header-nav-item">
+            <a class="header-nav-link link" href="./index.html">Студия</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link link" href="./portfolio.html"
+              >Портфолио</a
+            >
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link link" href="">Контакты</a>
+          </li>
         </ul>
       </nav>
+      <ul class="header-contact-list list">
+        <li class="header-contact-item">
+          <a class="header-contact-link link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="header-contact-item">
+          <a class="header-contact-link link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
     </header>
     <main>
-      <section>
-        <h1>Портфолио</h1>
+      <section class="portfolio">
+        <h1 class="visually-hidden">Портфолио</h1>
         <!--Filter-->
-        <ul>
-          <li>
-            <button type="button">Все</button>
+        <ul class="portfolio-filter-list list">
+          <li class="portfolio-filter-item">
+            <button class="portfolio-filter-btn" type="button">Все</button>
           </li>
-          <li>
-            <button type="button">Веб-сайты</button>
+          <li class="portfolio-filter-item">
+            <button class="portfolio-filter-btn" type="button">
+              Веб-сайты
+            </button>
           </li>
-          <li>
-            <button type="button">Приложения</button>
+          <li class="portfolio-filter-item">
+            <button class="portfolio-filter-btn" type="button">
+              Приложения
+            </button>
           </li>
-          <li>
-            <button type="button">Дизайн</button>
+          <li class="portfolio-filter-item">
+            <button class="portfolio-filter-btn" type="button">Дизайн</button>
           </li>
-          <li>
-            <button type="button">Маркетинг</button>
+          <li class="portfolio-filter-item">
+            <button class="portfolio-filter-btn" type="button">
+              Маркетинг
+            </button>
           </li>
         </ul>
         <!--Works list-->
-        <ul>
-          <li>
-            <a href=""
+        <ul class="portfolio-work-list list">
+          <li class="portfolio-work-item">
+            <a class="portfolio-work-link link" href=""
               ><img
                 src="./images/portfolio-webpage.jpg"
                 alt="Ноутбук с изображением веб станицы"
                 width="370"
                 height="294"
             /></a>
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-work-title">Технокряк</h2>
+            <p class="portfolio-work-text">Веб-сайт</p>
           </li>
-          <li>
-            <a href=""
+          <li class="portfolio-work-item">
+            <a class="portfolio-work-link link" href=""
               ><img
                 src="./images/portfolio-basketball.jpg"
                 alt="Два баскедболиста"
                 width="370"
                 height="294"
             /></a>
-            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-work-title">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h2>
+            <p class="portfolio-work-text">Дизайн</p>
           </li>
-          <li>
-            <a href=""
+          <li class="portfolio-work-item">
+            <a class="portfolio-work-link link" href=""
               ><img
                 src="./images/portfolio-seafood.jpg"
                 alt="Логотип ресторана"
                 width="370"
                 height="294"
             /></a>
-            <h2>Ресторан <span lang="en">Seafood</span></h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-work-title">
+              Ресторан <span lang="en">Seafood</span>
+            </h2>
+            <p class="portfolio-work-text">Приложение</p>
           </li>
-          <li>
-            <a href=""
+          <li class="portfolio-work-item">
+            <a class="portfolio-work-link link" href=""
               ><img
                 src="./images/portfolio-headphones.jpg"
                 alt="Наушники"
                 width="370"
                 height="294"
             /></a>
-            <h2>Проект <span lang="en">Prime</span></h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-work-title">
+              Проект <span lang="en">Prime</span>
+            </h2>
+            <p class="portfolio-work-text">Маркетинг</p>
           </li>
-          <li>
-            <a href=""
+          <li class="portfolio-work-item">
+            <a class="portfolio-work-link link" href=""
               ><img
                 src="./images/portfolio-boxes.jpg"
                 alt="Две коробки"
                 width="370"
                 height="294"
             /></a>
-            <h2>Проект <span lang="en">Boxes</span></h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-work-title">
+              Проект <span lang="en">Boxes</span>
+            </h2>
+            <p class="portfolio-work-text">Приложение</p>
           </li>
-          <li>
-            <a href=""
+          <li class="portfolio-work-item">
+            <a class="portfolio-work-link link" href=""
               ><img
                 src="./images/portfolio-monitor.jpg"
                 alt="Монитор"
                 width="370"
                 height="294"
             /></a>
-            <h2 lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-work-title" lang="en">
+              Inspiration has no Borders
+            </h2>
+            <p class="portfolio-work-text">Веб-сайт</p>
           </li>
-          <li>
-            <a href=""
+          <li class="portfolio-work-item">
+            <a class="portfolio-work-link link" href=""
               ><img
                 src="./images/portfolio-magazine.jpg"
                 alt="Журнал"
                 width="370"
                 height="294"
             /></a>
-            <h2>Издание <span lang="en">Limited Edition</span></h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-work-title">
+              Издание <span lang="en">Limited Edition</span>
+            </h2>
+            <p class="portfolio-work-text">Дизайн</p>
           </li>
-          <li>
-            <a href=""
+          <li class="portfolio-work-item">
+            <a class="portfolio-work-link link" href=""
               ><img
                 src="./images/portfolio-label.jpg"
                 alt="Ярлык"
                 width="370"
                 height="294"
             /></a>
-            <h2>Проект <span lang="en">LAB</span></h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-work-title">
+              Проект <span lang="en">LAB</span>
+            </h2>
+            <p class="portfolio-work-text">Маркетинг</p>
           </li>
-          <li>
-            <a href=""
+          <li class="portfolio-work-item">
+            <a class="portfolio-work-link link" href=""
               ><img
                 src="./images/portfolio-notebook.jpg"
                 alt="Ноутбук"
                 width="370"
                 height="294"
             /></a>
-            <h2 lang="en">Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-work-title" lang="en">Growing Business</h2>
+            <p class="portfolio-work-text">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <ul>
-          <li>
+    <footer class="footer">
+      <a class="footer-logo link" href="./index.html"
+        ><span class="footer-logo-accent">Web</span>Studio
+      </a>
+      <address class="footer-address">
+        <ul class="footer-list list">
+          <li class="footer-item">
             <a
+              class="footer-address-link link"
               href="https://goo.gl/maps/RLzgMfpruisoDYnj7"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+          <li class="footer-item">
+            <a class="footer-link link" href="mailto:info@example.com"
+              >info@example.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <li class="footer-item">
+            <a class="footer-link link" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
